/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec.decorator";
option java_multiple_files = true;

// Specs for {@link AndroidSwitchUserDecoratorSpec}
// Next tag: 6
message AndroidSwitchUserDecoratorSpec {
  extend DecoratorSpec {
    optional AndroidSwitchUserDecoratorSpec ext = 1004;
  }

  optional bool cleanup_users = 1 [
    default = true,
    (field_detail) = {
      help: "Whether to perform cleanup i.e. switch back to starting user, "
            "delete created users, etc. It won't take effect when the param "
            "switch_to_test_user is true."
    }
  ];

  optional string switch_user = 2 [
    default = "current",
    (field_detail) = {
      help: "The user to switch to. Must be one of "
            "[current, system, primary, secondary, guest]. It won't take "
            "effect when the param switch_to_test_user is true."
    }
  ];

  optional string switch_user_wait_state = 3 [
    default = "RUNNING_UNLOCKED",
    (field_detail) = {
      help: "The state to wait for after switching users. Most common (and "
            "default) is RUNNING_UNLOCKED. Other (rare) values might be "
            "RUNNING_LOCKED or RUNNING_UNLOCKING."
    }
  ];

  optional bool switch_to_test_user = 4 [
    default = false,
    (field_detail) = {
      help: "Whether to switch to dedicated test user, whose user name is "
            "omnilab_created_user."
    }
  ];

  optional bool reuse_test_user = 5 [
    default = false,
    (field_detail) = { help: "Whether to reuse already created test user." }
  ];
}
